@@ -202,6 +202,7 @@ class SettingIndex:
    fit_iterations        =185
    fit_tolerance         =186
    batch_prefix          =187
+   stereo_mode           =188
    
 setting_sc = Shortcut(SettingIndex.__dict__.keys())
    
