@@ -107,6 +107,8 @@ Current Bugs to Fix
 
 Changes up to 0.82
 
+   * cross-eye side-by-side stereo support
+
    * fixed bug in valency display code
 
    * fixed major bug in "create"
